iac/v4/nginx-test/nginx-service.yaml
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort # ALB는 NodePort 또는 ClusterIP 서비스를 대상으로 할 수 있습니다.
